--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: minima
+title: Ma Blog
+author: Ruben Flam-Shepherd
+description: Musings about hockey stats, data engineering and mindfulness
